--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^14.19.2",
     "dotenv": "^16.5.0",
     "mh-wilds-event-scraper": "git+https://github.com/imTheme2206/mh-wilds-event-scraper.git#main",
+    "mh-wilds-event-card-generator": "git+https://github.com/imTheme2206/mh-wilds-event-card-generator.git#fix/project-structure",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
