--- a/fly.toml
+++ b/fly.toml
@@ -1,22 +1,26 @@
-app = "enlightened-fellows-bot"  # You may want to change this to a unique name
-primary_region = "sin"  # Singapore region, adjust to your preference
+# fly.toml app configuration file generated for enlightened-fellows-discord-bot on 2025-08-26T20:10:18+07:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'enlightened-fellows-discord-bot'
+primary_region = 'sin'
+
+[experimental]
 
 [build]
-  dockerfile = "Dockerfile"
-
-[processes]
-  app = "node dist/index.js"
-
-# No [[services]] block since this is a Discord bot without HTTP endpoints
+  dockerfile = 'Dockerfile'
 
 [deploy]
-  strategy = "immediate"
-  auto_rollback = true
-
-# Scale to a single instance to avoid duplicate cron jobs
-[experimental]
-  auto_scale_memory = 256
-  auto_scale_cpu = 0.5
+  strategy = 'immediate'
 
 [env]
-  NODE_ENV = "production"
+  NODE_ENV = 'production'
+
+[processes]
+  app = 'node dist/index.js'
+
+[[vm]]
+  memory = '256mb'
+  cpu_kind = 'shared'
+  cpus = 1
